# fastapi

./: .gitignore  Bevi FastAPI.postman_collection.json  Dockerfile  README.md  alembic.ini  auth.py  database.py  docker-compose.yml  product.db  pyproject.toml
bevi_products/: main.py
controllers/: product_controller.py
migrations/: env.py
models/: product.py
schemas/: product.py
services/: product_service.py
tests/: test_auth.py  test_home_root.py  test_products_operations.py
